--- a/index.ipynb
+++ b/index.ipynb
@@ -417,11 +417,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries =set(count)"
+    "unique_countries =set(countries)"
    ]
   },
   {
