--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set"
+    "unique_countries = set(countries)\n",
+    "unique"
    ]
   },
   {
