--- a/index.ipynb
+++ b/index.ipynb
@@ -422,7 +422,7 @@
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique"
+    "unique_countries ="
    ]
   },
   {
