Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,17 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries = list(unique_countrir)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -435,19 +435,19 @@
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
+       "['Finland',\n",
        " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
+       " 'USA',\n",
        " 'Mexico',\n",
-       " 'Morocco',\n",
+       " 'Argentina',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Morocco',\n",
+       " 'Malta',\n",
+       " 'Croatia',\n",
+       " 'Italy']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
